--- a/views/user/help.ejs
+++ b/views/user/help.ejs
@@ -1,26 +1,26 @@
 <%- include('../layouts/header.ejs') %>
     <%- include('../layouts/navbar.ejs') %>
 
-        <style>
-            .accordion-button {
-                background-color: white !important;
-                color: #088178 !important;
-                border: 1px solid #088178 !important;
-                box-shadow: none !important;
-            }
+    <style>
+        .accordion-button {
+            background-color: white !important;
+            color: #000000 !important;
+            border: 1px solid #088178 !important;
+            box-shadow: none !important;
+        }
 
-            .accordion-button:not(.collapsed) {
-                background-color: white !important;
-                color: #088178 !important;
-                border: 1px solid #088178 !important;
-                box-shadow: none !important;
-            }
+        .accordion-button:not(.collapsed) {
+            background-color: white !important;
+            color: #046963 !important;
+            border: 1px solid #088178 !important;
+            box-shadow: none !important;
+        }
 
-            .accordion-button:focus {
-                box-shadow: none !important;
-                outline: none !important;
-            }
-        </style>
+        .accordion-button:focus {
+            box-shadow: none !important;
+            outline: none !important;
+        }
+    </style>
 
         <main class="main single-page">
             <div class="page-header breadcrumb-wrap">
@@ -33,7 +33,7 @@
             </div>
 
             <section class="section-padding">
-                <div class="container pt-100 pb-100">
+                <div class="container pt-100 pb-100 fw-bold">
                     <h1 class="text-center">Help</h1>
 
                     <!-- Expansion Panel (Accordion) -->
