updated readme,license and fixed message pop up

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -1114,8 +1114,6 @@
 
 
                                 function addToWishList(productId) {
-
-
                                     fetch('/wishList/addTowishList/' + productId, {
                                         method: 'POST',
                                         headers: {
@@ -1176,12 +1174,13 @@
                                              } 
                                         })
                                         .catch(err => {
+                                            if (!err.data.success) {   
                                                 Swal.fire({
                                                     icon: 'error',
                                                     title: 'Failed',
                                                     text:err.response?.data?.message || "Something went wrong.",
                                                 });
-                                          
+                                            }
                                         });
                                 }
 
